fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@
     .contact {
       padding: 3% 10%;
       padding-top: 100px !important;
+      text-align: center;
     }
 
     .colored-section {
